--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # Site wide configuration
 
-title: "My Site"
-description: "This is a description of my awesome site."
+title: "Alya Mutiara"
+description: "This is the Alya's portfolio page."
 logo: # 120x120 px default image used for Twitter summary card
 teaser: # 400x250 px default teaser image used in image archive grid
 locale: en
@@ -26,13 +26,13 @@ plugins:
 
 # Site owner
 owner:
-  name:
-  email:
+  name: Alya
+  email: alyamf@gmail.com
   twitter:
   google:
     ad-client:
     ad-slot:
-  bio:
+  bio: An Aspiring Data Analyst
   avatar: bio-photo.jpg # 160x160 px image for author byline
   disqus-shortname:
 
