Update navigation and footer

--- a/_data/footer.yml
+++ b/_data/footer.yml
@@ -1,4 +1,10 @@
 # Footer navigation links
 
-- title:
-  url:
+- title: Linkedin
+  url: https://linkedin.com/in/alyamf
+
+- title: Github
+  url: https://github.com/alyamutiara
+
+- title: Medium
+  url: https://medium.com/@mutiaraa
