--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,9 +1,9 @@
 # Site navigation links
+- title: About Me
+  url: /about/
 
 - title: Resume
-  url: /resume/
-  excerpt:
-  image:
+  url: /asset/resume.pdf
 
 - title: Portfolio
   url: /portfolio/
