--- a/mysite/config/_default/menus.en.toml
+++ b/mysite/config/_default/menus.en.toml
@@ -11,13 +11,13 @@
 # ordered by weight from lowest to highest.
 
 [[main]]
-  name = "Blog"
-  pageRef = "posts"
+  name = "About"
+  pageRef = "about"
   weight = 10
 
 [[main]]
-  name = "Categories"
-  pageRef = "categories"
+  name = "Portfolio"
+  pageRef = "posts"
   weight = 20
 
 [[main]]
